--- a/android/build.gradle
+++ b/android/build.gradle
@@ -37,6 +37,13 @@ android {
     lintOptions {
         disable 'InvalidPackage'
     }
+
+    sourceSets{
+        main{
+            assets. srcDirs = ['assets']
+        }
+    }
+
 }
 
 dependencies {
